# src/swagger.json
@@ -11,6 +11,7 @@
   "paths": {
     "/users": {
       "post": {
+        "operationId": "createUser",
         "tags": [
           "users"
         ],
@@ -40,10 +41,9 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "enum": [
-                    "null"
-                  ],
-                  "nullable": true
+                  "type": "object",
+                  "properties": {},
+                  "additionalProperties": false
                 }
               }
             }
@@ -51,6 +51,7 @@
         }
       },
       "get": {
+        "operationId": "getUser",
         "tags": [
           "users"
         ],
@@ -87,6 +88,7 @@
     },
     "/users/{id}": {
       "get": {
+        "operationId": "getUsersById",
         "tags": [
           "users"
         ],
